добавляет модальное окно, формы, pixel perfect

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -126,7 +126,7 @@ body {
   width: 465px;
   margin: 0;
   padding: 0;
-  margin-left: 30px;
+  margin-left: 28px;
   list-style-type: none;
 }
 
@@ -210,7 +210,7 @@ body {
   width: 20px;
   height: 20px;
   top: 11px;
-  left: 20px;
+  left: 19px;
   font-size: 10px;
   line-height: 10px;
   text-align: center;
@@ -241,7 +241,7 @@ body {
 
 .main-intro{
   min-height: 485px;
-  background-color: #ffffff;
+  background-color: #3F5E72;
   background-image: url('../images/welcome-background.jpg');
   background-size: cover;
   background-repeat: no-repeat;
@@ -338,7 +338,7 @@ body {
 .reasons-title{
   margin: 0;
   padding: 0;
-  padding-top: 103px;
+  padding-top: 104px;
   padding-bottom: 30px;
   font-size: 24px;
   line-height: 28px;
@@ -375,7 +375,7 @@ body {
 .reasons-description{
   margin: 0;
   padding: 0;
-  padding-top: 30px;
+  padding-top: 31px;
   font-size: 18px;
   line-height: 21px;
 }
@@ -407,8 +407,8 @@ body {
 .services-title{
   margin: 0;
   padding: 0;
-  padding-top: 182px;
-  padding-bottom: 30px;
+  padding-top: 183px;
+  padding-bottom: 29px;
   font-size: 24px;
   line-height: 28px;
   font-weight: 700;
@@ -428,7 +428,7 @@ body {
   content: "";
   position: absolute;
   top: 80px;
-  width: 75px;
+  width: 77px;
   height: 72px;
   background-repeat: no-repeat;
   background-size: contain;
@@ -439,7 +439,7 @@ body {
   content: "";
   position: absolute;
   top: 80px;
-  width: 75px;
+  width: 76px;
   height: 72px;
   background-repeat: no-repeat;
   background-size: contain;
@@ -449,9 +449,10 @@ body {
   background-image: url(../images/reason/reason-icon-souvenirs.svg);
   content: "";
   position: absolute;
-  top: 80px;
-  width: 75px;
-  height: 72px;
+  right: 162px;
+  top: 78px;
+  width: 76px;
+  height: 77px;
   background-repeat: no-repeat;
   background-size: contain;
 }
@@ -497,7 +498,8 @@ body {
   margin: 0 auto;
   min-height: 414px;
   text-align: center;
-  color: #ffffff;
+  color: #FFFFFF;
+  background-color: #3F5E72;
   background-image: url('../images/subscribe-background.jpg');
   background-size: cover;
   background-repeat: no-repeat;
@@ -516,7 +518,7 @@ body {
 .subscribe-description{
   margin: 0;
   padding: 0;
-  margin-top: 20px;
+  margin-top: 21px;
   margin-bottom: 54px;
 }
 
@@ -534,7 +536,7 @@ body {
   border: none;
   font: inherit;
   font-size: 18px;
-  font-weight: 24px;
+  line-height: 24px;
   border-radius: 4px 0 0 4px;
 }
 
@@ -551,7 +553,7 @@ body {
   background-color: #ffffff;
   justify-content: space-between;
   min-height: 50px;
-  padding: 40px 0 30px;
+  padding: 45px 0 35px;
   align-items: center;
 }
 
@@ -593,6 +595,7 @@ body {
 }
 
 .phone{
+  margin-left: -47px;
   font-size: 40px;
   line-height: 40px;
   text-align: center;
@@ -604,6 +607,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
 }
 
 .footer-about-logo-icon{
@@ -659,7 +663,7 @@ body {
   background-color: #F2F2F2;
   border: none;
   border-radius: 50%;
-  background-image: url(../images/icon-close.svg);
+  background-image: url(../images/modal/icon-close.svg);
   background-repeat: no-repeat;
   background-position: center;
   cursor: pointer;
@@ -676,10 +680,13 @@ body {
 
 .modal-close-button:active{
   background-color: #E6E6E6;
+  outline: none;
+  background-image: url(../images/modal/icon-close-active.svg);
 }
 
 .modal-title {
   margin: 0;
+  padding: 0;
   margin-bottom: 64px;
   font-family: "PT Sans", sans-serif;
   font-size: 30px;
@@ -689,34 +696,81 @@ body {
   text-transform: uppercase;
 }
 
+.field-group{
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
+
+.field-group-guests{
+  display: flex;
+  justify-content: space-between;
+}
+
+.field-group-adults {
+  width: 247px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+}
+
+.field-group-children {
+  width: 242px;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
 .modal-text{
+  font-family: inherit;
   font-size: 20px;
   line-height: 24px;
   font-weight: 700;
   color: #000000;
-  font-style: bold;
   text-transform: capitalize;
 }
 
 .modal-date-field{
   width: 440px;
   height: 48px;
+  margin-left: auto;
   padding-top: 12px;
   padding-bottom: 12px;
   padding-left: 20px;
   background-color: #F2F2F2;
   border: none;
   border-radius: 4px;
+  font-family: inherit;
   font-size: 18px;
   line-height: 24px;
   font-weight: 700;
   color: #000000;
-  font-style: bold;
+  background-image: url(../images/modal/icon-calendar.svg);
+  background-repeat: no-repeat;
+  background-position: center right 22px;
+}
+
+.modal-date-field:hover{
+  background-color: #E6E6E6;
+}
+
+.modal-date-field:focus{
+  background-color: #E6E6E6;
+  outline: 3px solid #83B3D3;
+}
+
+.modal-date-field:active{
+  background-color: #F2F2F2;
+  border: 2px solid #000000;
+  outline: none;
 }
 
 .modal-description{
-  margin: 0;
+  margin: 4px auto 23px 157px;
   padding: 0;
+  font-family: inherit;
   font-size: 16px;
   line-height: 21px;
   font-weight: 400;
@@ -726,19 +780,167 @@ body {
   color: #FF5757;
 }
 
-.modal-people-field{
-  width: 31px;
+.modal-guests-field{
+  width: 110px;
+  padding: 14px 50px;
   background-color: #F2F2F2;
   border: none;
+  border-radius: 4px;
+  font-family: inherit;
   font-size: 18px;
   line-height: 20px;
   font-weight: 700;
   color: #000000;
-  font-style: bold;
 }
 
-.modal-container-close {
+.children-field{
+  margin-left: 73px;
+}
+
+.modal-number-button{
+  position: absolute;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20px;
+  height: 20px;
+  border: none;
+}
+
+.button-minus-adults{
+  top: 14px;
+  left: 147px;
+  outline: none;
+}
+
+.button-plus-adults{
+  top: 14px;
+  left: 218px;
+  outline: none;
+}
+
+.button-minus-children{
+  top: 14px;
+  left: 140px;
+  outline: none;
+}
+
+.button-plus-children{
+  top: 14px;
+  left: 211px;
+  outline: none;
+}
+
+.modal-icon{
+  color: #7561574D;
+}
+
+.modal-icon:hover,
+.modal-icon:focus{
+  color: #000000;
+}
+
+.modal-number-button:focus{
+  border: 3px solid #83B3D3;
+  border-radius: 4px;
+}
+
+.modal-icon:active{
+  color: #7561574D;
+}
+
+.modal-find-button{
+  margin-top: 48px;
+  width: 577px;
+  height: 60px;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  background-color: #82B3D3;
+  border-radius: 10px;
+}
+
+.modal-find-button:hover,
+.modal-find-button:focus{
+  background-color: #68A2CA;
+  outline: none;
+}
+
+.modal-find-button:active{
+  background-color: #68A2CA;
+  color: rgba(242, 242, 242, 0.3);
+}
+
+.modal-container-close{
   display: none;
+}
+
+/*тултип*/
+.form-label{
+  position: relative;
+  padding-right: 10px;
+}
+
+.tooltip{
+  position: absolute;
+  margin-left: 59px;
+  width: 26px;
+  height: 26px;
+}
+
+.tooltip-toggle{
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  margin: 0;
+  display: block;
+}
+
+.tooltip-icon{
+  width: 100%;
+  height: 100%;
+  display: block;
+  color: #83B3D3;
+}
+
+.tooltip-text{
+  background-color: #333333;
+  border-radius: 10px;
+  color: #ffffff;
+  font-family: inherit;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: none;
+  padding: 22px 18px 18px 22px;
+  width: 256px;
+  position: absolute;
+  top: 100%;
+  margin-top: 15px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
+  display: none;
+}
+
+.tooltip-text:after{
+  content:'';
+  background-image: url(../images/modal/tooltip-arrow.svg);
+  width: 19px;
+  height: 9px;
+  position: absolute;
+  bottom: 100%;
+  left:0;
+  right:0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.tooltip-toggle:hover + .tooltip-text,
+.tooltip-toggle:focus + .tooltip-text{
+  display: block;
 }
 
 /*страница с гостиницами*/
@@ -747,7 +949,8 @@ body {
   flex-wrap: wrap;
   margin: 0 auto;
   min-height: 412px;
-  color: #ffffff;
+  color: #FFFFFF;
+  background-color: #3F5E72;
   background-image: url("../images/filter-background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
@@ -756,6 +959,7 @@ body {
 
 .inner-header-breadcrumbs{
   min-width: 1060px;
+  min-height: 107px;
   margin: 35px 70px 40px;
   padding: 0;
   display: flex;
@@ -822,7 +1026,7 @@ body {
 /*фильтр*/
 .catalog-hotels{
   display: flex;
-  margin: 0 70px 38px;
+  margin: 0 70px 70px;
   padding: 0;
   min-width: 1060px;
 }
@@ -836,7 +1040,7 @@ body {
 .catalog-filter-group{
   margin: 0;
   padding: 0;
-  margin-right: 70px;
+  margin-right: 71px;
   border: none;
 }
 
@@ -945,7 +1149,7 @@ body {
 .catalog-filter-price{
   margin: 0;
   padding: 0;
-  margin-left: 70px;
+  margin-left: 80px;
   margin-right: 70px;
   display: flex;
   flex-direction: column;
@@ -964,10 +1168,9 @@ body {
 .filter-label-price-min::after {
   position: absolute;
   font-family: inherit;
-  font-weight: 400;
   font-size: 18px;
   line-height: 24px;
-  font-style: bold;
+  font-weight: 400;
   top: 12px;
   right: 20px;
   color: #000000;
@@ -982,10 +1185,9 @@ body {
 .filter-label-price-max::after {
   position: absolute;
   font-family: inherit;
-  font-weight: 400;
   font-size: 18px;
   line-height: 24px;
-  font-style: bold;
+  font-weight: 400;
   top: 12px;
   right: 20px;
   color: #000000;
@@ -998,7 +1200,9 @@ body {
   padding-top: 12px;
   padding-bottom: 12px;
   padding-left: 20px;
-  font-family: inherit;
+  font-family: "PT Sans";
+  font-size: 18px;
+  line-height: 24px;
   font-weight: 700;
   background-color: #F2F2F2;
   border: none;
@@ -1011,7 +1215,9 @@ body {
   padding-top: 12px;
   padding-bottom: 12px;
   padding-left: 20px;
-  font-family: inherit;
+  font-family: "PT Sans";
+  font-size: 18px;
+  line-height: 24px;
   font-weight: 700;
   background-color: #F2F2F2;
   border: none;
@@ -1032,7 +1238,7 @@ body {
 
 .range-input-min:active,
 .range-input-max:active{
-  background-color: #E6E6E6;
+  background-color: #F2F2F2;
   outline: 2px solid #000000;
 }
 
@@ -1176,7 +1382,7 @@ body {
 /*вернуться*/
 .select-control{
   margin-right: 70px;
-  padding: 12px 20px;
+  padding: 12px 16px;
   width: 290px;
   height: 49px;
   font: inherit;
@@ -1188,7 +1394,7 @@ body {
   border-radius: 4px;
   background-image: url(../images/icons-catalog-main/icon-select-arrow.svg);
   background-repeat: no-repeat;
-  background-position: right 20px center;
+  background-position: right 18px center;
   appearance: none;
 }
 
@@ -1226,6 +1432,10 @@ body {
   margin-right: 8px;
 }
 
+.card-grid-toggle-current{
+  border: 2px solid #000000;
+}
+
 .card-grid-toggle:hover,
 .card-grid-toggle:active{
   border: 2px solid #000000;
@@ -1255,7 +1465,7 @@ body {
   list-style-type: none;
   border: 1px solid #E6E6E6;
   border-radius: 4px;
-  padding: 20px;
+  padding: 19px;
   display: grid;
   grid-template-columns: repeat(2, 140px);
   grid-template-rows: 212px min-content auto min-content min-content;
@@ -1332,7 +1542,7 @@ body {
   display: flex;
   list-style-type: none;
   width: 1060px;
-  margin: 40px 0 60px;
+  margin: 39px 0 60px;
   padding: 0;
 }
 
