--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,6 +34,7 @@ body {
   line-height: 26px;
   color:#333333;
   background-color: #F2F2F2;
+  min-width: 1200px;
 }
 
 .visually-hidden {
@@ -316,7 +317,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: relative;
   background-color: rgba(131, 179, 211, 0.12);
 }
 
@@ -345,16 +345,19 @@ body {
   font-weight: 700;
   color: #000000;
   text-transform: uppercase;
+  position: relative;
 }
 
 .reasons-title::after{
   content: "";
   position: absolute;
-  top: 189px;
-  right: 170px;
+  right: 0;
+  bottom: 0;
+  left: 0;
   width: 60px;
   height: 2px;
   background-color: rgba(0, 0, 0, 0.3);
+  margin: 0 auto;
 }
 
 .reasons-title.white-title{
@@ -365,11 +368,13 @@ body {
 .reasons-title.white-title::after{
   content: "";
   position: absolute;
-  top: 178px;
-  right: 170px;
+  right: 0;
+  bottom: 0;
+  left: 0;
   width: 60px;
   height: 2px;
   background-color: rgba(255, 255, 255, 0.3);
+  margin: 0 auto;
 }
 
 .reasons-description{
@@ -487,7 +492,7 @@ body {
   padding: 8px 50px;
   margin: 54px 412px 96px;
   width: 376px;
-  height: 52px;
+  min-height: 52px;
 }
 
 /*подписка*/
@@ -540,8 +545,30 @@ body {
   border-radius: 4px 0 0 4px;
 }
 
+.email-field:hover{
+  background-color: #E6E6E6;
+}
+
+.email-field:focus{
+  background-color: #E6E6E6;
+  outline: 3px solid #83B3D3;
+}
+
+.email-field:active{
+  background-color: #F2F2F2;
+  border: 2px solid #000000;
+  outline: none;
+}
+
+.email-field:disabled{
+  color: #FFFFFF;
+  background-color: #E6E6E6;
+}
+
 .subscribe-button{
   border-radius: 0 4px 4px 0;
+  max-width: 232px;
+  margin-bottom: 104px;
 }
 
 /*футер*/
@@ -588,6 +615,7 @@ body {
 .button-socials-icon:hover,
 .button-socials-icon:focus{
   color: #68A2CA;
+  outline: none;
 }
 
 .button-socials-icon:active{
@@ -701,10 +729,12 @@ body {
   padding: 0;
   display: flex;
   align-items: center;
+  margin-bottom: 48px;
 }
 
 .field-group-guests{
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 
@@ -714,6 +744,7 @@ body {
   justify-content: space-between;
   align-items: center;
   position: relative;
+  margin-bottom: 48px;
 }
 
 .field-group-children {
@@ -721,6 +752,7 @@ body {
   display: flex;
   align-items: center;
   position: relative;
+  margin-bottom: 48px;
 }
 
 .modal-text{
@@ -767,8 +799,13 @@ body {
   outline: none;
 }
 
+.modal-date-field:disabled{
+  color: #FFFFFF;
+  background-color: #E6E6E6;
+}
+
 .modal-description{
-  margin: 4px auto 23px 157px;
+  margin: -44px auto 23px 157px;
   padding: 0;
   font-family: inherit;
   font-size: 16px;
@@ -793,11 +830,27 @@ body {
   color: #000000;
 }
 
-.children-field{
-  margin-left: 73px;
+.modal-guests-field:hover{
+  background-color: #E6E6E6;
+}
+
+.modal-guests-field:focus{
+  background-color: #E6E6E6;
+  outline: 3px solid #83B3D3;
+}
+
+.modal-guests-field:active{
+  background-color: #F2F2F2;
+  outline: 2px solid #000000;
+}
+
+.modal-guests-field:disabled{
+  color: #FFFFFF;
+  background-color: #E6E6E6;
 }
 
 .modal-number-button{
+  z-index: 1;
   position: absolute;
   padding: 0;
   display: flex;
@@ -806,6 +859,7 @@ body {
   width: 20px;
   height: 20px;
   border: none;
+  border-radius: 4px;
 }
 
 .button-minus-adults{
@@ -818,6 +872,10 @@ body {
   top: 14px;
   left: 218px;
   outline: none;
+}
+
+.children-field{
+  margin-left: auto;
 }
 
 .button-minus-children{
@@ -836,9 +894,10 @@ body {
   color: #7561574D;
 }
 
-.modal-icon:hover,
-.modal-icon:focus{
+.modal-number-button:hover .modal-icon,
+.modal-number-button:focus .modal-icon{
   color: #000000;
+  background-color: #E6E6E6;
 }
 
 .modal-number-button:focus{
@@ -846,12 +905,16 @@ body {
   border-radius: 4px;
 }
 
-.modal-icon:active{
+.modal-number-button:active{
+  border: none;
+  outline: none;
+}
+
+.modal-number-button:active .modal-icon{
   color: #7561574D;
 }
 
 .modal-find-button{
-  margin-top: 48px;
   width: 577px;
   height: 60px;
   font-family: inherit;
@@ -978,6 +1041,7 @@ body {
 
 .breadcrumbs{
   display: flex;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
   align-items: center;
@@ -986,14 +1050,19 @@ body {
   text-align: left;
   color: #ffffff;
   list-style-type: none;
-  position: relative;
 }
 
 .breadcrumbs-item:first-of-type{
   margin-right: 28px;
+  position: relative;
 }
 
-.breadcrumbs::before{
+.breadcrumbs-item{
+  margin-right: 10px;
+}
+
+
+.breadcrumbs-item:first-of-type::before{
   position: absolute;
   content: "";
   background-image: url(../images/icons-catalog-main/icon-breadcrumbs-arrow.svg);
@@ -1033,6 +1102,7 @@ body {
 
 .catalog-filter{
   display: flex;
+  flex-wrap: wrap;
   min-width: 1060px;
   margin: 0 auto;
 }
@@ -1116,6 +1186,10 @@ body {
 
 .control:active .control-label {
   color: rgba(255, 255, 255, 0.3);
+}
+
+.control-input:focus + span {
+  outline: 3px solid #83B3D3;
 }
 
 .control-input[type="checkbox"]:checked + .control-mark::before {
@@ -1208,6 +1282,7 @@ body {
   border: none;
   border-radius: 4px 0 0 4px;
   width: 143px;
+  appearance: textfield;
 }
 
 .range-input-max{
@@ -1223,6 +1298,7 @@ body {
   border: none;
   border-radius: 0 4px 4px 0;
   width: 143px;
+  appearance: textfield;
 }
 
 .range-input-min:hover,
@@ -1242,13 +1318,21 @@ body {
   outline: 2px solid #000000;
 }
 
+.range-input-min:disabled,
+.range-input-max:disabled{
+  color: #FFFFFF;
+  background-color: #E6E6E6;
+}
+
 .range-input-min::-webkit-outer-spin-button,
 .range-input-min::-webkit-inner-spin-button,
 .range-input-max::-webkit-outer-spin-button,
-.range-input-max::-webkit-inner-spin-button {
+.range-input-max::-webkit-inner-spin-button{
   appearance: none;
   margin: 0;
 }
+
+
 
 .range-scale {
   position: relative;
@@ -1340,10 +1424,10 @@ body {
 /*результаты поиска*/
 .sorting-container{
   display: flex;
-  margin: 50px 0 40px;
+  margin: 50px 0 32px;
   padding: 0;
   width: 1060px;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
 }
 
@@ -1361,8 +1445,9 @@ body {
 .search-results-title{
   margin: 0;
   padding: 0;
-  margin-right: 200px;
-  width: 340px;
+  margin-top: 7px;
+  margin-right: 150px;
+  width: 390px;
   font-size: 30px;
   line-height: 36px;
   font-weight: 700;
@@ -1375,13 +1460,14 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
 }
 
 /*вернуться*/
 .select-control{
-  margin-right: 70px;
+  margin-right: 62px;
   padding: 12px 16px;
   width: 290px;
   height: 49px;
@@ -1426,11 +1512,10 @@ body {
   width: 48px;
   border: 2px solid #E5E5E5;
   border-radius: 4px;
+  margin-left: 8px;
+  margin-bottom: 8px;
 }
 
-.card-grid-toggle:not(:last-child){
-  margin-right: 8px;
-}
 
 .card-grid-toggle-current{
   border: 2px solid #000000;
@@ -1540,10 +1625,15 @@ body {
 
 .pagination{
   display: flex;
+  flex-wrap: wrap;
   list-style-type: none;
   width: 1060px;
-  margin: 39px 0 60px;
+  margin: 39px 0 52px;
   padding: 0;
+}
+
+.pagination-item{
+  margin-bottom: 8px;
 }
 
 .pagination-item:not(:last-child) {
@@ -1560,8 +1650,8 @@ body {
   text-decoration: none;
   display: block;
   padding-top: 12px;
-  width: 60px;
-  height: 60px;
+  min-width: 60px;
+  min-height: 60px;
   border-radius: 4px;
 }
 
